# cvplot

./: .clang-tidy  .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  Makefile  README.md
include/cvplot/: color.h  figure.h  highgui.h  plot.h  window.h
src/cvplot/: color.cc  figure.cc  highgui.cc  internal.h  plot.cc  window.cc
src/demo/: demo.cc
test/cvplot/: color_test.cc  figure_test.cc  plot_test.cc  window_test.cc
